[package]
name = "mmo_data_dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysbot_rs = { git = "https://github.com/SteveCookTU/sysbot_rs.git", rev = "976e9a0"}
clap = { version = "4.0.18", features = ['derive'] }
tokio = {version = "1.21.2", features = ['full']}